Use Character cache.